--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -9,11 +9,27 @@
     align-items: center;
 
     .logo {
-        font: bold 32px $roboto;
-        padding-left: 2rem;
-        text-decoration: underline;
-        letter-spacing: 3px;
-        color: $charcoal;
+        display: inline-flex;
+        align-items: center;
+        text-decoration: none;
+        &:hover {
+            span {
+                text-decoration: underline;
+            }
+        }
+
+        img {
+            width: 50px;
+            height: 50px;
+        }
+
+        span {
+            flex: 1;
+            font: bold 32px $rubik;
+            padding-left: 1rem;
+            letter-spacing: 3px;
+            color: $cyan;
+        }
     }
 
     .menu {
@@ -32,7 +48,8 @@
             padding: 10px;
             border-radius: 5px;
 
-            &:hover {
+            &:hover,
+            &.active {
                 background-color: $cyan;
                 color: white;
             }
